# Biocenosis-imitation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
